--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
-    "graphql": "^15.3.0"
+    "graphql": "^15.3.0",
+    "graphql-tools": "^6.0.12"
   }
 }
